# raylib-assetsys

./: .gitmodules  CMakeLists.txt  README.md  SDL_assetsys.h  raylib-assetsys.h
cmake/: FindSDL2.cmake
test/: CMakeLists.txt  SDL_assetsys_test.c  raylib-assetsys-test.c
